--- a/src/app/components/product/product-detail/product-detail.component.scss
+++ b/src/app/components/product/product-detail/product-detail.component.scss
@@ -1,3 +1,15 @@
 @import '@core/scss/base/pages/app-ecommerce-details.scss';
 @import '@core/scss/angular/libs/swiper.component.scss';
 @import '@core/scss/angular/libs/ratings.component.scss';
+.image-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+  }
+  
+  .image-item img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+  }
+  
