--- a/src/app/layout/vertical/vertical-layout.component.html
+++ b/src/app/layout/vertical/vertical-layout.component.html
@@ -4,6 +4,10 @@
 
 <!-- MENU -->
 <ng-container *ngTemplateOutlet="menu"></ng-container>
+<!-- <app-menu menuType="vertical-menu" class="vertical-menu">
+  <div class="custom-item">My Custom Item</div>
+</app-menu> -->
+
 <!--/ MENU -->
 
 <!-- APP-CONTENT -->
